# biology-ru

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
assets/: config.toml
migrations/2024-11-12-204040_uniprot_entries/: up.sql
migrations/2024-11-12-204043_uniprot_families/: down.sql  up.sql
migrations/2024-11-14-140435_uniprot_families/: down.sql  up.sql
migrations/2024-11-15-161712_uniprot_entries/: down.sql  up.sql
migrations/2024-11-15-161803_uniprot_sequence_similarity_families/: down.sql  up.sql
migrations/2024-11-15-161840_belongs_to_uniprot_sequence_similarity_family/: down.sql  up.sql
src/: cli.rs  lib.rs  main.rs  schema.rs  uniprot.rs
src/commands/: mod.rs  uaspire.rs  uniprot.rs
src/uaspire/: constants.rs  fastq.rs  mod.rs
src/uniprot/: models.rs  similar.rs
