[package]
name = "biology-ru"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
thiserror = "1.0"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
diesel = { version = "2.2.4", features = ["sqlite"] }

[[bin]]
name = "uniprot_similar_db"
path = "src/bin/uniprot_similar_db.rs"
