[package]
name = "biology-ru"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
thiserror = "1.0"
clap = { version = "4.5.21", features = ["derive"] }
config = "0.14.1"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
diesel = { version = "2.2.4", features = ["sqlite"] }
dotenvy = "0.15.7"

[[bin]]
name = "uniprot_similar_db"
path = "src/bin/uniprot_similar_db.rs"
