[package]
name = "biology-ru"
version = "0.1.0"
edition = "2021"

[lib]
name = "biology_ru"
path = "src/lib.rs"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
thiserror = "1.0"
clap = { version = "4.5.21", features = ["derive"] }
config = "0.14.1"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
diesel = { version = "2.2.4", features = ["sqlite"] }
dotenvy = "0.15.7"
fastq = "0.6.0"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bio = "2.2.0"
flate2 = "1.1.1"
csv = "1.3.1"
